feat: Migrate to Doubao API for AI planning
Replaced the Google Generative AI dependency with the Doubao API. This change updates the service implementation to use the Doubao API for generating travel plans and session titles. The system instruction has also been updated to reflect the use of the Doubao model.

--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@google/genai": "*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
